# navegacion_offline_flutter

./: README.md  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  valhalla_bridge.cpp
assets/maps/: style.json  transporte_app.db
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/database/: database_helper.dart
lib/models/: favorite_route.dart  location_point.dart  parada.dart  parada_ruta.dart  puma_route.dart  route_schedule.dart  ruta.dart  search_result.dart  ubicacion.dart  user.dart  user_profile.dart
lib/providers/: data_provider.dart  map_provider.dart
lib/screens/: favorites_screen.dart  home_screen.dart  main_screen.dart  map_screen.dart  profile_screen.dart  route_detail_screen.dart  route_results_screen.dart  routes_screen.dart
lib/services/: local_storage_service.dart  offline_map_service.dart  route_database_service.dart  tflite_service.dart  valhalla_service.dart
lib/ui/: detector_screen.dart
lib/utils/: image_utils.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
